[package]
name = "web3"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "web3"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.23.0"
hex = "0.4.0"
bytes = "0.4.12"
# web3 = "0.18.0"
web3 = { git = "https://github.com/everknow/rust-web3", branch="dom" }
serde_json = "1.0.79"
secp256k1 = {version ="0.21.2", features = ["rand"]}
rand = "0.6.5"
parity-crypto = {version = "0.9.0", features = ["publickey"]}
